# Anton-Voice-assistant

./: .env.example  .gitignore  README.md  agent_anton.py  com.niranjan.anton.wake.plist  launch_wake.sh  main.py  pyproject.toml  server.py  start.md  wake.py
anton/: __init__.py  config.py  google_auth.py
anton/prompts/: __init__.py
anton/resources/: __init__.py  data.py
anton/tools/: __init__.py  briefing.py  calendar.py  gmail.py  obsidian.py  sleep.py  spotify.py  system_control.py  weather.py  web.py
ui/: index.html  package-lock.json  package.json  token-server.js  vite.config.js
ui/src/: App.jsx  index.css  main.jsx
ui/src/components/: ChatArea.jsx  InputBar.jsx  Sidebar.jsx  TopBar.jsx
